some layout modification, tags categorization added

--- a/_posts/2014-04-05-Signal.md
+++ b/_posts/2014-04-05-Signal.md
@@ -3,6 +3,7 @@ layout: post
 title: Signals
 category: post
 author: octogavrix
+tag: Framework
 ---
 
 Signals are essentially the building bricks of a program written in [FRP]. Basically, you program not what to do, but rather how many signals program has, where these signals take values from and how signals are connected with each other and thus how values passing through are transformed along the way. You can think of signal as a pipeline ([@ashfurrow](https://twitter.com/ashfurrow) brings more on this analogy in his [book](https://leanpub.com/iosfrp)) and your program is nothing but a complex pipeline system, when events are being passed as inputs to this pipeline, and results are presented when output comes out.
