--- a/_posts/2014-03-28-Intro.md
+++ b/_posts/2014-03-28-Intro.md
@@ -3,7 +3,7 @@ layout: post
 categories: [about]
 ---
 
-**ReactiveCocoa design patterns** is a blog specifically aimed to cover various design patterns and particular soultions using [ReactiveCocoa] and [FRP] when buidling iOS and MacOS applications. 
+**ReactiveCocoa design patterns** is a blog specifically aimed to cover various design patterns and particular solutions using [ReactiveCocoa] and [FRP] when building iOS and MacOS applications. 
 
 
 [ReactiveCocoa]:https://github.com/ReactiveCocoa/ReactiveCocoa
